samples/_failures_safe/1761497227_f7e11a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_421e49da.c: In function ‘main’:
./samples/SAFE/__tmp_421e49da.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_421e49da.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_421e49da.c:152:17: error: expected declaration or statement at end of input
